# pyasil

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
src/pyasil/: __init__.py  integrity.py
src/pysild/: __init__.py
tests/: test_integrity.py
