[build-system]
requires = [
  "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyasil"
description = "Utilities to deal with safety integrity levels"
authors = [
  {name = "Daniele Faugiana", email = "dan.faugiana@gamil.com"},
]
version = "2024.0.0a1"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
  "ruff",
]
test = [
    "pytest",
]
